--- a/index.html
+++ b/index.html
@@ -4,26 +4,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
-  <title>Spinners Pizza</title>
-  <link rel="icon" href="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/logos/1.png?raw=true">
-  <meta property="og:title" content="Spinner's Pizza - Your Favorite Pizza Spot!">
-  <meta property="og:description" content="Delicious pizzas, mouth-watering wings, and more! Visit Spinner's Pizza today!">
-  <meta property="og:image" content="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/background/1.jpg?raw=true">
+  <title>Spinners Pizza - Grovespring MO</title>
+  <link rel="icon" href="https://spinners.pizza/assets/images/background/1.jpg">
+  <meta property="og:title" content="Spinners Pizza - Grovespring Missouri">
+  <meta property="og:description" content="Delicious pizzas, mouth-watering wings, and more! Call (417) 462-7746 to place an order for Deliver or Carry-out.">
+  <meta property="og:image" content="https://spinners.pizza/assets/images/background/1.jpg">
   <meta property="og:url" content="https://spinners.pizza">
   <meta property="og:type" content="website">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Spinner's Pizza - Your Favorite Pizza Spot!">
-  <meta name="twitter:description" content="Delicious pizzas, mouth-watering wings, and more! Visit Spinner's Pizza today!">
-  <meta name="twitter:image" content="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/background/1.jpg?raw=true">
+  <meta name="twitter:title" content="SSpinners Pizza - Grovespring Missouri">
+  <meta name="twitter:description" content="Delicious pizzas, mouth-watering wings, and more! Call (417) 462-7746 to place an order for Deliver or Carry-out.">
+  <meta name="twitter:image" content="https://spinners.pizza/assets/images/background/1.jpg">
   <meta name="apple-mobile-web-app-title" content="Spinner's Pizza">
-  <link rel="apple-touch-icon" href="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/background/1.jpg?raw=true">
-  <meta property="og:site_name" content="Spinner's Pizza">
+  <link rel="apple-touch-icon" href="https://spinners.pizza/assets/images/background/1.jpg">
+  <meta property="og:site_name" content="Spinners Pizza - Grovespring Missouri">
   <meta property="og:locale" content="en_US">
   <meta name="og:image:width" content="1200">
   <meta name="og:image:height" content="630">
-  <link rel="icon" type="image/png" href="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/background/1.jpg?raw=true" sizes="192x192">
+  <link rel="icon" type="image/png" href="https://spinners.pizza/assets/images/background/1.jpg" sizes="192x192">
   <meta name="description" content="Spinner's Pizza offers a variety of delicious pizzas, BBQ, and burgers in Grovespring, MO. Experience great food and service!">
-  <meta name="keywords" content="pizza, restaurant, Spinners Pizza, Grovespring, delicious pizzas, BBQ, burgers, family-friendly">
+<meta name="keywords" content="pizza, restaurant, Spinners Pizza, Grovespring, delicious pizzas, BBQ, burgers, family-friendly, local restaurants near me">
   <meta name="author" content="Spinners Pizza">
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
