--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
   <header class="bg-primary text-secondary fixed w-full z-30 shadow-md header overflow-visible">
     <div class="container mx-auto flex justify-between items-center p-4 relative ">
       <div class="absolute left-4 top-5 logo-container h-40 w-40 flex items-center justify-center animate-rotate">
-        <img src="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/logos/1.png?raw=true" id="logo" alt="Spinners Pizza Logo" class="h-full w-full rounded-md object-cover" onerror="this.onerror=null; this.src='https://picsum.photos/160'">
+        <img src="https://spinners.pizza/assets/images/logos/1.png?raw=true" id="logo" alt="Spinners Pizza Logo" class="h-full w-full rounded-md object-cover" onerror="this.onerror=null; this.src='https://picsum.photos/160'">
       </div>
       <h1 class="text-xl sm:text-2xl font-bold ml-48 mr-4">Spinners Pizza</h1>
       <nav>
@@ -212,7 +212,7 @@
       </ul>
     </div>
   </header>
-  <section id="home" class="bg-cover bg-center h-screen relative" style="background-image: url('https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/background/current.jpg?raw=true');">
+  <section id="home" class="bg-cover bg-center h-screen relative" style="background-image: url('https://spinners.pizza/assets/images/background/current.jpg?raw=true');">
     <div class="absolute inset-0 z-10 bg-black bg-opacity-50"></div>
     <div class="relative z-10 h-full flex flex-col items-center justify-center text-center text-secondary p-4 px-6 sm:px-12">
       <h2 class="text-3xl sm:text-4xl md:text-5xl font-bold mb-4">Welcome to Spinners Pizza!</h2>
@@ -223,7 +223,7 @@
   <section id="about" class="py-12 bg-gray-50">
     <div class="container mx-auto text-center px-6">
       <h3 class="text-2xl sm:text-3xl font-bold mb-4">About Spinners Pizza</h3>
-      <img src="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/logos/98.png?raw=true" class="mx-auto w-1/4 aspect-auto border-4" alt="Spinner">
+      <img src="https://spinners.pizza/assets/images/logos/98.png?raw=true" class="mx-auto w-1/4 aspect-auto border-4" alt="Spinner">
       <p class="text-base sm:text-lg">At Spinners Pizza, our passion is crafting delicious pizzas and other menu items with the finest ingredients. Our commitment to quality and community drives us to serve you every day.</p>
       <p class="mt-4 text-base sm:text-lg">We proudly offer discounts to our heroes – service members, police officers, firefighters, and first responders – as a thank you for their dedication.</p>
     </div>
@@ -255,13 +255,13 @@
             Take a look inside our cozy and welcoming restaurant—perfect for family meals or a quick bite with friends!
           </p>
           <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
-            <img src="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/restaurant/02%20walking%20in%20from%20front%20door%20looking%20at%20the%20dining%20room.jpg?raw=true" alt="Walking into Dining Room" class="cursor-pointer rounded-md" onclick="openGalleryModal(0)" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=2'">
-            <img src="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/restaurant/03%20straight%20from%20the%20entrance%20looking%20at%20the%20counter.jpg?raw=true" alt="Looking at the Counter" class="cursor-pointer rounded-md" onclick="openGalleryModal(1)" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=3'">
-            <img src="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/restaurant/04%20view%20from%20counter%20looking%20at%20the%20door%20to%20the%20restaurant%20and%20the%20restrooms.jpg?raw=true" alt="Door to Restaurant and Restrooms" class="cursor-pointer rounded-md" onclick="openGalleryModal(2)" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=4'">
-            <img src="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/restaurant/05%20view%20of%20dining%20room%20from%20the%20counter.jpg?raw=true" alt="Dining Room from Counter" class="cursor-pointer rounded-md" onclick="openGalleryModal(3)" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=5'">
-            <img src="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/restaurant/06%20dining%20area.jpg?raw=true" alt="Dining Area 1" class="cursor-pointer rounded-md" onclick="openGalleryModal(4)" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=6'">
-            <img src="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/restaurant/07%20dining%20area.jpg?raw=true" alt="Dining Area 2" class="cursor-pointer rounded-md" onclick="openGalleryModal(5)" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=7'">
-            <img src="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/restaurant/08%20dining%20area.jpg?raw=true" alt="Dining Area 3" class="cursor-pointer rounded-md" onclick="openGalleryModal(6)" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=8'">
+            <img src="https://spinners.pizza/assets/images/restaurant/02%20walking%20in%20from%20front%20door%20looking%20at%20the%20dining%20room.jpg?raw=true" alt="Walking into Dining Room" class="cursor-pointer rounded-md" onclick="openGalleryModal(0)" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=2'">
+            <img src="https://spinners.pizza/assets/images/restaurant/03%20straight%20from%20the%20entrance%20looking%20at%20the%20counter.jpg?raw=true" alt="Looking at the Counter" class="cursor-pointer rounded-md" onclick="openGalleryModal(1)" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=3'">
+            <img src="https://spinners.pizza/assets/images/restaurant/04%20view%20from%20counter%20looking%20at%20the%20door%20to%20the%20restaurant%20and%20the%20restrooms.jpg?raw=true" alt="Door to Restaurant and Restrooms" class="cursor-pointer rounded-md" onclick="openGalleryModal(2)" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=4'">
+            <img src="https://spinners.pizza/assets/images/restaurant/05%20view%20of%20dining%20room%20from%20the%20counter.jpg?raw=true" alt="Dining Room from Counter" class="cursor-pointer rounded-md" onclick="openGalleryModal(3)" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=5'">
+            <img src="https://spinners.pizza/assets/images/restaurant/06%20dining%20area.jpg?raw=true" alt="Dining Area 1" class="cursor-pointer rounded-md" onclick="openGalleryModal(4)" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=6'">
+            <img src="https://spinners.pizza/assets/images/restaurant/07%20dining%20area.jpg?raw=true" alt="Dining Area 2" class="cursor-pointer rounded-md" onclick="openGalleryModal(5)" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=7'">
+            <img src="https://spinners.pizza/assets/images/restaurant/08%20dining%20area.jpg?raw=true" alt="Dining Area 3" class="cursor-pointer rounded-md" onclick="openGalleryModal(6)" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=8'">
           </div>
         </div>
       </div>
@@ -333,10 +333,10 @@
       </div>
       <div class="mt-8">
         <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 gap-4">
-          <img src="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/menu/menu1.jpg?raw=true" alt="Menu Image 1" class="cursor-pointer rounded-md" onclick="openMenuModal(0)" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=9'">
-          <img src="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/menu/menu2.jpg?raw=true" alt="Menu Image 2" class="cursor-pointer rounded-md" onclick="openMenuModal(1)" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=10'">
-          <img src="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/menu/menu3.jpg?raw=true" alt="Menu Image 3" class="cursor-pointer rounded-md" onclick="openMenuModal(2)" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=11'">
-          <img src="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/menu/menu4.jpg?raw=true" alt="Menu Image 4" class="cursor-pointer rounded-md" onclick="openMenuModal(3)" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=12'">
+          <img src="https://spinners.pizza/assets/images/menu/menu1.jpg?raw=true" alt="Menu Image 1" class="cursor-pointer rounded-md" onclick="openMenuModal(0)" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=9'">
+          <img src="https://spinners.pizza/assets/images/menu/menu2.jpg?raw=true" alt="Menu Image 2" class="cursor-pointer rounded-md" onclick="openMenuModal(1)" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=10'">
+          <img src="https://spinners.pizza/assets/images/menu/menu3.jpg?raw=true" alt="Menu Image 3" class="cursor-pointer rounded-md" onclick="openMenuModal(2)" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=11'">
+          <img src="https://spinners.pizza/assets/images/menu/menu4.jpg?raw=true" alt="Menu Image 4" class="cursor-pointer rounded-md" onclick="openMenuModal(3)" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=12'">
         </div>
       </div>
     </div>
@@ -422,13 +422,13 @@
   <script>
     // Gallery Images
     const galleryImages = [
-      "https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/restaurant/02%20walking%20in%20from%20front%20door%20looking%20at%20the%20dining%20room.jpg?raw=true",
-      "https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/restaurant/03%20straight%20from%20the%20entrance%20looking%20at%20the%20counter.jpg?raw=true",
-      "https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/restaurant/04%20view%20from%20counter%20looking%20at%20the%20door%20to%20the%20restaurant%20and%20the%20restrooms.jpg?raw=true",
-      "https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/restaurant/05%20view%20of%20dining%20room%20from%20the%20counter.jpg?raw=true",
-      "https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/restaurant/06%20dining%20area.jpg?raw=true",
-      "https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/restaurant/07%20dining%20area.jpg?raw=true",
-      "https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/restaurant/08%20dining%20area.jpg?raw=true",
+      "https://spinners.pizza/assets/images/restaurant/02%20walking%20in%20from%20front%20door%20looking%20at%20the%20dining%20room.jpg?raw=true",
+      "https://spinners.pizza/assets/images/restaurant/03%20straight%20from%20the%20entrance%20looking%20at%20the%20counter.jpg?raw=true",
+      "https://spinners.pizza/assets/images/restaurant/04%20view%20from%20counter%20looking%20at%20the%20door%20to%20the%20restaurant%20and%20the%20restrooms.jpg?raw=true",
+      "https://spinners.pizza/assets/images/restaurant/05%20view%20of%20dining%20room%20from%20the%20counter.jpg?raw=true",
+      "https://spinners.pizza/assets/images/restaurant/06%20dining%20area.jpg?raw=true",
+      "https://spinners.pizza/assets/images/restaurant/07%20dining%20area.jpg?raw=true",
+      "https://spinners.pizza/assets/images/restaurant/08%20dining%20area.jpg?raw=true",
     ];
     let currentGalleryIndex = 0;
     const galleryModal = document.getElementById('gallery-modal');
@@ -464,10 +464,10 @@
 
     // Menu Images
     const menuImages = [
-      "https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/menu/menu1.jpg?raw=true",
-      "https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/menu/menu2.jpg?raw=true",
-      "https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/menu/menu3.jpg?raw=true",
-      "https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/menu/menu4.jpg?raw=true",
+      "https://spinners.pizza/assets/images/menu/menu1.jpg?raw=true",
+      "https://spinners.pizza/assets/images/menu/menu2.jpg?raw=true",
+      "https://spinners.pizza/assets/images/menu/menu3.jpg?raw=true",
+      "https://spinners.pizza/assets/images/menu/menu4.jpg?raw=true",
     ];
     let currentMenuIndex = 0;
     const menuModal = document.getElementById('menu-modal');
@@ -532,7 +532,7 @@
         logoNumber = Math.floor(Math.random() * 6) + 1;
       } while (logoNumber === lastLogoNumber);
       lastLogoNumber = logoNumber;
-      logo.src = `https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/logos/${logoNumber}.png?raw=true`;
+      logo.src = `https://spinners.pizza/assets/images/logos/${logoNumber}.png?raw=true`;
     };
     setRandomLogo();
     setInterval(setRandomLogo, 4000);
